# Hubris-AmbiGANs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  container_cicd.Dockerfile  pyproject.toml
.github/workflows/: main.yml  pr.yml
experiments/: mnist.sh
experiments/ambigan/: chest-xray.yml  fashion-mnist-dressvtshirt.yml  mnist-9v8.yml
experiments/ambigan_original/: mnist-7v1_dcgan.yml  mnist-7v1_dcgan_v2.yml  mnist-7v1_unique_dcgan.yml  mnist-7v1_unique_dcgan_v2.yml  mnist-9v8_dcgan.yml  mnist-9v8_dcgan_v2.yml  mnist-9v8_unique_dcgan.yml  mnist-9v8_unique_dcgan_v2.yml
experiments/ambigan_upscaling/: chest-xray-initial.yml  fashion-mnist-dressvtshirt.yml  mnist-9v8.yml
experiments/gasten/: fashion_3v0.yml  mnist_5v3.yml  mnist_7v1.yml  mnist_8v0.yml  mnist_9v4.yml
scripts/cicd/: classifier_test.sh  config_gan_test.yml  config_main_test.yml  gan_test.sh  gen_test_noise_test.sh  main_test.sh  test_pr.sh
src/: __init__.py  __main__.py  constants.py  enums.py  gen_classifiers.py  gen_dataset.py  gen_pairwise_inception.py  gen_test_noise.py  models.py
src/classifier/: __init__.py  classifier_cache.py  classifier_cli.py  construct_classifier.py  ensemble.py  my_mlp.py  pretrained.py  simple_cnn.py  train.py  train_classifier.py
src/datasets/: __init__.py  datasets.py  load.py  utils.py
src/evaluation/: __init__.py  evaluation_cli.py  pretrained_models.py
src/gan/: __init__.py  construct_gan.py  gan_cli.py  loss.py  train.py  update_g.py
src/gan/architectures/: __init__.py  dcgan.py  dcgan_v2.py  resnet.py
src/gan/architectures/deprecated/: dcgan_deprecated.py  resnet_deprecated.py
src/metrics/: __init__.py  accuracy.py  c_output_hist.py  focd.py  hubris.py  loss_term.py  metric.py
src/metrics/fid/: __init__.py  __main__.py  fid.py  fid_cli.py  fid_score.py  inception.py
src/utils/: __init__.py  checkpoint.py  config.py  logging.py  metrics_logger.py  min_norm_solvers.py  plot.py  read_config.py  utility_functions.py
tests/: test_accuracy.py  test_c_output_hist.py  test_checkpoint.py  test_classifier.py  test_classifier_cache.py  test_classifier_cli.py  test_construct_classifier.py  test_construct_gan.py  test_datasets.py  test_dcgan.py  test_ensemble.py  test_fid.py  test_fid_cli.py  test_gan_cli.py  test_gen_pairwise_inception.py  test_gen_test_noise.py  test_hubris.py  test_load.py  test_loss.py  test_loss_term.py  test_metrics_logger.py  test_my_mlp.py  test_pretrained.py  test_read_config.py  test_simple_cnn.py  test_train.py  test_train_classifier.py  test_train_gan.py  test_update_g.py  test_utility_functions.py  test_utils.py
