[tool.poetry]
name = "src"
version = "0.1.0"
description = "Hubris Benchmarking with AmbiGANs for publication"
authors = ["Catia Teixeira <catia.rds.teixeira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
schema = "^0.7.7"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
torch = "^2.4.1"
torchvision = "^0.19.1"
tqdm = "^4.66.5"
wandb = "^0.18.3"
pillow = "^10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
